--- a/index.html
+++ b/index.html
@@ -5,64 +5,69 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Raleway:wght@700&display=swap"
+            rel="stylesheet">
+        <link rel="stylesheet" href="./css/style.css">
     </head>
 
     <body>
-        <header>
-            <nav>
-                <a href=""
+        <header class="header">
+            <nav class="header-navigation">
+                <a href="" class="header-logo"
                     ><img
                         src="./images/header-logo.svg"
                         alt="Лого сайта"
                         width="66"
                         height="55"
                 /></a>
-                <ul>
-                    <li>
-                        <a href="">О нас</a>
+                <ul class="header-list list">
+                    <li class="header-item">
+                        <a class="header-link link" href="">О нас</a>
                     </li>
-                    <li>
-                        <a href="">Услуги и цены</a>
+                    <li class="header-item">
+                        <a class="header-link link" href="">Услуги и цены</a>
                     </li>
-                    <li>
-                        <a href="">Мастера</a>
+                    <li class="header-item">
+                        <a class="header-link link" href="">Мастера</a>
                     </li>
-                    <li>
-                        <a href="">Контакты</a>
+                    <li class="header-item">
+                        <a class="header-link link" href="">Контакты</a>
                     </li>
                 </ul>
             </nav>
-            <div>
-                <a href="tel:+380441111111">+38 044 111 11 11</a>
-                <button type="button">онлайн-запись</button>
+            <div class="header-right">
+                <a class="header-tel link" href="tel:+380441111111">+38 044 111 11 11</a>
+                <button class="header-button btn" type="button">онлайн-запись</button>
             </div>
         </header>
         <main>
-            <section>
-                <ul>
-                    <li>
-                        <a href="" target="_blank" rel="noopener noreferrer"
+            <section class="hero">
+                <ul class="hero-list list">
+                    <li class="hero-item">
+                        <a class="hero-item-link link" href="" target="_blank" rel="noopener noreferrer"
                             >Instagram</a
                         >
                     </li>
-                    <li>
-                        <a href="" target="_blank" rel="noopener noreferrer"
+                    <li class="hero-item">
+                        <a class="hero-item-link link" href="" target="_blank" rel="noopener noreferrer"
                             >Youtube</a
                         >
                     </li>
                 </ul>
-                <div>
-                    <p lang="en">A hair salon for men in Kyiv</p>
-                    <h1 lang="en">BarberShop</h1>
-                    <p>
+                <div class="hero-main">
+                    <p lang="en" class="hero-pre-text pre-text">A hair salon for men in Kyiv</p>
+                    <h1 class="hero-title" lang="en">BarberShop</h1>
+                    <p class="hero-text after-text">
                         Мы эксперты в модных мужских стрижках.<br />
                         Работаем быстро, осторожно и со вкусом.
                     </p>
                 </div>
             </section>
-            <section>
-                <ul>
-                    <li>
+            <section class="about">
+                <ul class="about-list list">
+                    <li class="about-item">
                         <img
                             src="./images/about/about-img-1.jpg"
                             alt="Барбер бреет бороду"
@@ -70,7 +75,7 @@
                             height="445"
                         />
                     </li>
-                    <li>
+                    <li class="about-item">
                         <img
                             src="./images/about/about-img-2.jpg"
                             alt="Барбер стрижет клиента"
@@ -79,14 +84,14 @@
                         />
                     </li>
                 </ul>
-                <div>
-                    <p>О НАС</p>
-                    <h2>Лучший Барбершоп твоего города</h2>
-                    <p>
+                <div class="about-content">
+                    <p class="about-pre-text pre-text">О НАС</p>
+                    <h2 class="about-title section-title">Лучший Барбершоп твоего города</h2>
+                    <p class="about-after-text after-text">
                         Если ты хочешь добавить в свой образ больше уверенности
                         – тебе точно к нам.
                     </p>
-                    <p>
+                    <p class="about-text">
                         Мы команда, которая никогда не останавливается на
                         достигнутом и жаждет перемен. И когда ты попадешь в руки
                         нашего мастера, то уже никогда не сможешь быть прежним.
@@ -97,116 +102,116 @@
                     <button type="button">онлайн-запись</button>
                 </div>
             </section>
-            <section>
-                <p>Проведи время в компании лучших мастеров</p>
-                <h2>Услуги и цены</h2>
-                <ul>
-                    <li>
-                        <p>Мужская стрижка</p>
-                        <span>от 300 грн.</span>
+            <section class="prices">
+                <p class="prices-pre-text pre-text">Проведи время в компании лучших мастеров</p>
+                <h2 class="prices-title section-title">Услуги и цены</h2>
+                <ul class="prices-list list">
+                    <li class="prices-item">
+                        <p class="prices-item-text">Мужская стрижка</p>
+                        <span class="prices-item-text">от 300 грн.</span>
                     </li>
-                    <li>
-                        <p>Стрижка бороды</p>
-                        <span>от 200 грн.</span>
+                    <li class="prices-item">
+                        <p class="prices-item-text">Стрижка бороды</p>
+                        <span class="prices-item-text">от 200 грн.</span>
                     </li>
-                    <li>
-                        <p>Стрижка усов</p>
-                        <span>от 200 грн.</span>
+                    <li class="prices-item">
+                        <p class="prices-item-text">Стрижка усов</p>
+                        <span class="prices-item-text">от 200 грн.</span>
                     </li>
-                    <li>
-                        <p>Бритье опасной бритвой</p>
-                        <span>от 200 грн.</span>
-                    </li>
-                </ul>
-                <ul>
-                    <li>
-                        <p>Cтрижка у стажера</p>
-                        <span>от 50 грн.</span>
-                    </li>
-                    <li>
-                        <p>Стрижка под насадку</p>
-                        <span>от 200 грн.</span>
-                    </li>
-                    <li>
-                        <p>Детская стрижка (до 12 лет)</p>
-                        <span>от 300 грн.</span>
-                    </li>
-                    <li>
-                        <p>Камуфлирование седины</p>
-                        <span>от 200 грн.</span>
+                    <li class="prices-item">
+                        <p class="prices-item-text">Бритье опасной бритвой</p>
+                        <span class="prices-item-text">от 200 грн.</span>
                     </li>
                 </ul>
-                <button type="button">онлайн-запись</button>
+                <ul class="prices-list list">
+                    <li class="prices-item">
+                        <p class="prices-item-text">Cтрижка у стажера</p>
+                        <span class="prices-item-text">от 50 грн.</span>
+                    </li>
+                    <li class="prices-item">
+                        <p class="prices-item-text">Стрижка под насадку</p>
+                        <span class="prices-item-text">от 200 грн.</span>
+                    </li>
+                    <li class="prices-item">
+                        <p class="prices-item-text">Детская стрижка (до 12 лет)</p>
+                        <span class="prices-item-text">от 300 грн.</span>
+                    </li>
+                    <li class="prices-item">
+                        <p class="prices-item-text">Камуфлирование седины</p>
+                        <span class="prices-item-text">от 200 грн.</span>
+                    </li>
+                </ul>
+                <button type="button" class="btn prices-btn">онлайн-запись</button>
             </section>
-            <section>
-                <ul>
-                    <li>
-                        <span>600</span>
-                        <p>Довольных клиентов в день</p>
+            <section class="reason"> 
+                <ul class="reason-list list">
+                    <li class="reason-item">
+                        <span class="reason-count">600</span>
+                        <p class="reason-item-text">Довольных клиентов в день</p>
                     </li>
-                    <li>
-                        <span>50</span>
-                        <p>Наград за отличный сервис</p>
+                    <li class="reason-item">
+                        <span class="reason-count">50</span>
+                        <p class="reason-item-text">Наград за отличный сервис</p>
                     </li>
-                    <li>
-                        <span>20</span>
-                        <p>Лучших мастеров Киева</p>
+                    <li class="reason-item">
+                        <span class="reason-count">20</span>
+                        <p class="reason-item-text">Лучших мастеров Киева</p>
                     </li>
-                    <li>
-                        <span>100</span>
-                        <p>Подарков постоянным клиентам</p>
+                    <li class="reason-item">
+                        <span class="reason-count">100</span>
+                        <p class="reason-item-text">Подарков постоянным клиентам</p>
                     </li>
                 </ul>
-                <div>
-                    <p>старая традиционная школа</p>
-                    <h2>Почему приходят именно к нам?</h2>
-                    <p>
+                <div class="reason-right">
+                    <p class="reason-pre-text pre-text">старая традиционная школа</p>
+                    <h2 class="reason-title section-title">Почему приходят именно к нам?</h2>
+                    <p class="reason-after-text after-text">
                         О нас говорят только хорошее. Но лучше 1 раз увидеть и
                         прочувствовать, чем 10 раз прочитать.
                     </p>
                 </div>
             </section>
-            <section>
-                <p>для настоящих ценителей атмосферы</p>
-                <h2>Наши мастера</h2>
-                <ul>
-                    <li>
+            <section class="masters">
+                <p class="masters-pre-text pre-text">для настоящих ценителей атмосферы</p>
+                <h2 class="masters-title section-title">Наши мастера</h2>
+                <ul class="masters-list list">
+                    <li class="masters-item">
                         <img
                             src="./images/masters/masters-img1.jpg"
                             alt="Барбер стрижет"
                             width="370"
                             height="346"
                         />
-                        <h3 lang="en">John Smith</h3>
-                        <p lang="en">Extreme Barber</p>
+                        <h3 class="masters-item-title" lang="en">John Smith</h3>
+                        <p class="masters-item-text" lang="en">Extreme Barber</p>
                     </li>
-                    <li>
+                    <li class="masters-item">
                         <img
                             src="./images/masters/masters-img2.jpg"
                             alt="Барбер стрижет"
                             width="370"
                             height="346"
                         />
-                        <h3 lang="en">Michele Doe</h3>
-                        <p lang="en">Extreme Barber</p>
+                        <h3 class="masters-item-title" lang="en">Michele Doe</h3>
+                        <p class="masters-item-text" lang="en">Extreme Barber</p>
                     </li>
-                    <li>
+                    <li class="masters-item">
                         <img
                             src="./images/masters/masters-img3.jpg"
                             alt="Барбер стрижет"
                             width="370"
                             height="346"
                         />
-                        <h3 lang="en">Alan Black</h3>
-                        <p lang="en">Extreme Barber</p>
+                        <h3 class="masters-item-title" lang="en">Alan Black</h3>
+                        <p class="masters-item-text" lang="en">Extreme Barber</p>
                     </li>
                 </ul>
             </section>
-            <section>
+            <section class="gallery">
                 <h2 hidden lang="en">Gallery</h2>
-                <p>На латинском языке “барба” означает “борода”</p>
-                <ul>
-                    <li>
+                <p class="gallery-pre-text pre-text">На латинском языке “барба” означает “борода”</p>
+                <ul class="gallery-list list">
+                    <li class="gallery-item">
                         <img
                             src="./images/gallery/gallery-img1.jpg"
                             alt="Барбер стрижет"
@@ -214,7 +219,7 @@
                             height="360"
                         />
                     </li>
-                    <li>
+                    <li class="gallery-item">
                         <img
                             src="./images/gallery/gallery-img2.jpg"
                             alt="Барбер стрижет"
@@ -222,7 +227,7 @@
                             height="360"
                         />
                     </li>
-                    <li>
+                    <li class="gallery-item">
                         <img
                             src="./images/gallery/gallery-img3.jpg"
                             alt="Барбер стрижет"
@@ -230,7 +235,7 @@
                             height="360"
                         />
                     </li>
-                    <li>
+                    <li class="gallery-item">
                         <img
                             src="./images/gallery/gallery-img4.jpg"
                             alt="Барбер стрижет"
@@ -240,46 +245,47 @@
                     </li>
                 </ul>
             </section>
-            <section>
-                <h2>Онлайн-запись</h2>
+            <section class="online">
+                <h2 class="online-title section-title">Онлайн-запись</h2>
             </section>
-            <section>
-                <h2>Контакты</h2>
-                <address>
-                    <ul>
-                        <li>
+            <section class="contacts">
+                <h2 class="contacts-title section-title">Контакты</h2>
+                <address class="contacts-address">
+                    <ul class="contacts-list list">
+                        <li class="contacts-item">
                             <a
                                 href="https://goo.gl/maps/p4Gi17aGVq9bG5yL9"
                                 target="_blank"
                                 rel="noopener noreferrer"
+                                 class="contacts-link link"
                                 >ул. Васильковая, 7А<br />
                                 Киев, 08132</a
                             >
                         </li>
-                        <li>
-                            <a href="tel:+380441111111">+38 044 111 11 11</a>
+                        <li class="contacts-item">
+                            <a href="tel:+380441111111" class="contacts-link link">+38 044 111 11 11</a>
                         </li>
-                        <li>
-                            <a href="mailto:barbershop@email.com"
+                        <li class="contacts-item">
+                            <a href="mailto:barbershop@email.com" class="contacts-link link"
                                 >barbershop@email.com</a
                             >
                         </li>
                     </ul>
                 </address>
-                <p>время работы</p>
-                <p>Ежедневно с 9:00 до 22:00</p>
+                <p class="contacts-subtitle">время работы</p>
+                <p class="contacts-text">Ежедневно с 9:00 до 22:00</p>
             </section>
         </main>
-        <footer>
-            <p>&copy; Copyright 2020</p>
-            <ul>
-                <li>
-                    <a href="" target="_blank" rel="noopener noreferrer"
+        <footer class="footer">
+            <p class="footer-text">&copy; Copyright 2020</p>
+            <ul class="footer-list list">
+                <li class="footer-item">
+                    <a class="footer-link link" href="" target="_blank" rel="noopener noreferrer"
                         >Instagram</a
                     >
                 </li>
-                <li>
-                    <a href="" target="_blank" rel="noopener noreferrer"
+                <li class="footer-item">
+                    <a class="footer-link link" href="" target="_blank" rel="noopener noreferrer"
                         >Youtube</a
                     >
                 </li>
