--- a/index.html
+++ b/index.html
@@ -6,26 +6,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+        integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
-    <h1>Title</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus architecto tenetur modi itaque corporis
-        doloremque voluptatum mollitia tempora? Odio, accusantium!</p>
-    <!-- <ul class="some-list">
-        <li class="some-item"><a href="" class="some-link">Link-1</a></li>
-        <li class="some-item"><a href="" class="some-link">Link-2</a></li>
-        <li class="some-item"><a href="" class="some-link">Link-3</a></li>
-        <li class="some-item"><a href="" class="some-link">Link-4</a></li>
-        <li class="some-item"><a href="" class="some-link">Link-5</a></li>
-    </ul> -->
-    <div class="wrap">
-        <div class="block first">1</div>
-        <div class="block second">2</div>
-        <div class="block third">3</div>
-        <div class="block fourth">4</div>
-    </div>
+    <h1 class="title">Title</h1>
+    <p class="text-top">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus architecto tenetur modi itaque corporis
+        </p>
+
+        <p class="text-bottom">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus architecto 
+        </p>
+
+        <a href="">Link1</a>
+
+        <a href="">Link2</a>
+    <ul class="some-list list">
+        <li class="some-item">
+            <a href="" class="link some-link">Link-1</a>
+        </li>
+        <li class="some-item">
+            <a href="" class="some-link">Link-2</a>
+        </li>
+        <li class="some-item">
+            <a href="" class="some-link">Link-3</a>
+        </li>
+        <li class="some-item">
+            <a href="" class="some-link">Link-4</a>
+        </li>
+        <li class="some-item">
+            <a href="" class="some-link">Link-5</a>
+        </li>
+        <li class="some-item">
+            <a href="" class="some-link">Link-6</a>
+        </li>
+        
+    </ul>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis iste praesentium autem magnam vitae necessitatibus a eaque vel libero commodi.</p>
+
 </body>
 
 </html>
