--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <div class="wrapper">
+    <!-- <div class="wrapper">
         <div class="container">
             <div class="box red">1</div>
             <div class="box green">2</div>
             <div class="box blue">3</div>
+        </div>
+    </div> -->
+    <div class="wrapper">
+        <div class="block">
+            Text
         </div>
     </div>
 </body>
