--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <title>Document</title>
 </head>
 <body>
-    <p class="bg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi debitis odio quia error iste vel
+    <!-- <p class="bg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi debitis odio quia error iste vel
         perspiciatis aut voluptate earum non corrupti, rem fuga cupiditate laboriosam, ducimus, vitae quod expedita
-        repudiandae!</p>
+        repudiandae!</p> -->
     <!-- <div class="savanna"></div> -->
     <div class="container">
-        <!-- <div class="linear"></div>
-        <div class="radial"></div> -->
+        <div class="linear"></div>
+        <div class="radial"></div>
         <!-- <h2 class="title">Lorem ipsum dolor sit amet.</h2>
         <p class="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur, asperiores atque, dignissimos dicta delectus sit commodi esse debitis est in porro quas temporibus. Reprehenderit non libero adipisci aut. Magnam, facilis!</p> -->
         <div class="box"></div>
