--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -55,14 +55,15 @@
                 <div class="hero-left">
                     <ul class="hero-list list">
                         <li class="hero-item">
-                            <a class="hero-item-link link" href="" target="_blank" rel="noopener noreferrer">Instagram</a>
+                            <a class="hero-item-link link" href="" target="_blank"
+                                rel="noopener noreferrer">Instagram</a>
                         </li>
                         <li class="hero-item">
                             <a class="hero-item-link link" href="" target="_blank" rel="noopener noreferrer">Youtube</a>
                         </li>
                     </ul>
                 </div>
-                
+
                 <div class="hero-main">
                     <p lang="en" class="hero-pre-text pre-text">A hair salon for men in Kyiv</p>
                     <h1 class="hero-title" lang="en">BarberShop</h1>
@@ -187,10 +188,16 @@
                 <ul class="masters-list list">
                     <li class="masters-item item-one">
                         <div class="masters-overlay">
-                            <img src="./images/masters/masters-img1.jpg" alt="Барбер стрижет" width="370" height="346" />
+                            <img src="./images/masters/masters-img1.jpg" alt="Барбер стрижет" width="370"
+                                height="346" />
                             <p class="masters-top-text">
-                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur quod ab magni molestiae, ad odit facilis, velit, numquam impedit iure dolor! Minima aut quam, officiis omnis illum aliquid explicabo corrupti fuga. Ipsa optio ab fugiat culpa, accusantium tempore incidunt. Architecto.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur quod ab magni molestiae, ad odit facilis, velit,
-                                numquam impedit iure dolor! Minima aut quam, officiis omnis illum aliquid explicabo corrupti fuga. Ipsa optio ab fugiat
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur quod ab magni
+                                molestiae, ad odit facilis, velit, numquam impedit iure dolor! Minima aut quam, officiis
+                                omnis illum aliquid explicabo corrupti fuga. Ipsa optio ab fugiat culpa, accusantium
+                                tempore incidunt. Architecto.Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                                Pariatur quod ab magni molestiae, ad odit facilis, velit,
+                                numquam impedit iure dolor! Minima aut quam, officiis omnis illum aliquid explicabo
+                                corrupti fuga. Ipsa optio ab fugiat
                                 culpa, accusantium tempore incidunt. Architecto.
                             </p>
                         </div>
@@ -309,47 +316,58 @@
         </section>
         <section class="gallery section">
             <div class="container">
-            <h2 lang="en" class="visually-hidden">Gallery</h2>
-            <p class="gallery-pre-text pre-text">На латинском языке “барба” означает “борода”</p>
-            <ul class="gallery-list list">
-                <li class="gallery-item">
-                    <img src="./images/gallery/gallery-img1.jpg" alt="Барбер стрижет" width="270" height="360" />
-                </li>
-                <li class="gallery-item">
-                    <img src="./images/gallery/gallery-img2.jpg" alt="Барбер стрижет" width="270" height="360" />
-                </li>
-                <li class="gallery-item">
-                    <img src="./images/gallery/gallery-img3.jpg" alt="Барбер стрижет" width="270" height="360" />
-                </li>
-                <li class="gallery-item">
-                    <img src="./images/gallery/gallery-img4.jpg" alt="Барбер стрижет" width="270" height="360" />
-                </li>
-            </ul>
-            </div>
-        </section>
-        <section class="online">
-            <h2 class="online-title section-title">Онлайн-запись</h2>
-        </section>
-        <section class="contacts">
-            <h2 class="contacts-title section-title">Контакты</h2>
-            <address class="contacts-address">
-                <ul class="contacts-list list">
-                    <li class="contacts-item">
-                        <a href="https://goo.gl/maps/p4Gi17aGVq9bG5yL9" target="_blank" rel="noopener noreferrer"
-                            class="contacts-link link">ул. Васильковая, 7А<br />
-                            Киев, 08132</a>
+                <h2 lang="en" class="visually-hidden">Gallery</h2>
+                <p class="gallery-pre-text pre-text">На латинском языке “барба” означает “борода”</p>
+                <ul class="gallery-list list">
+                    <li class="gallery-item">
+                        <img src="./images/gallery/gallery-img1.jpg" alt="Барбер стрижет" width="270" height="360" />
                     </li>
-                    <li class="contacts-item">
-                        <a href="tel:+380441111111" class="contacts-link link">+38 044 111 11 11</a>
+                    <li class="gallery-item">
+                        <img src="./images/gallery/gallery-img2.jpg" alt="Барбер стрижет" width="270" height="360" />
                     </li>
-                    <li class="contacts-item">
-                        <a href="mailto:barbershop@email.com" class="contacts-link link">barbershop@email.com</a>
+                    <li class="gallery-item">
+                        <img src="./images/gallery/gallery-img3.jpg" alt="Барбер стрижет" width="270" height="360" />
+                    </li>
+                    <li class="gallery-item">
+                        <img src="./images/gallery/gallery-img4.jpg" alt="Барбер стрижет" width="270" height="360" />
                     </li>
                 </ul>
-            </address>
-            <p class="contacts-subtitle">время работы</p>
-            <p class="contacts-text">Ежедневно с 9:00 до 22:00</p>
+            </div>
         </section>
+        <div class="contact-wrapper">
+            <div class="container">
+                <section class="online section">
+                    <h2 class="online-title section-title">Онлайн-запись</h2>
+                    <form action="#">
+                        <input type="text" name="online-name" placeholder="Имя*" class="online-input">
+                        <input type="tel" name="online-tel" placeholder="Телефон*" class="online-input small">
+                        <textarea name="online-text" class="online-message" placeholder="сообщение"></textarea>
+                        <button type="submit" class="btn online-btn">отправить</button>
+                    </form>
+                </section>
+                <section class="contacts section">
+                    <h2 class="contacts-title section-title">Контакты</h2>
+                    <address class="contacts-address">
+                        <ul class="contacts-list list">
+                            <li class="contacts-item">
+                                <a href="https://goo.gl/maps/p4Gi17aGVq9bG5yL9" target="_blank"
+                                    rel="noopener noreferrer" class="contacts-link link">ул. Васильковая, 7А<br />
+                                    Киев, 08132</a>
+                            </li>
+                            <li class="contacts-item">
+                                <a href="tel:+380441111111" class="contacts-link link">+38 044 111 11 11</a>
+                            </li>
+                            <li class="contacts-item">
+                                <a href="mailto:barbershop@email.com"
+                                    class="contacts-link link">barbershop@email.com</a>
+                            </li>
+                        </ul>
+                    </address>
+                    <p class="contacts-subtitle">время работы</p>
+                    <p class="contacts-text">Ежедневно с 9:00 до 22:00</p>
+                </section>
+            </div>
+        </div>
     </main>
     <footer class="footer">
         <p class="footer-text">&copy; Copyright 2020</p>
@@ -365,6 +383,54 @@
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button type="button" class="btn-open" data-modal-close>X</button>
+            <form action="#" class="modal-form">
+                <b class="modal-title">Это какой-то текст для заголовка модалки</b>
+                <div class="modal-form-field">
+                    <label for="input-name" class="modal-form-label">Имя</label>
+                    <span class="input-wrap">
+                        <input type="text" id="input-name" class="modal-form-input" placeholder="Иван Иванов"
+                            name="modal-name">
+                        <svg class="modal-form-icon" width="12" height="12">
+                            <use href="./images/sprite.svg#icon-user"></use>
+                        </svg>
+                    </span>
+                </div>
+                <div class="modal-form-field">
+                    <label for="input-email" class="modal-form-label">Почта</label>
+                    <span class="input-wrap">
+                        <input type="email" id="input-email" class="modal-form-input" placeholder="ivan@mail"
+                            name="modal-name">
+                        <svg class="modal-form-icon" width="12" height="12">
+                            <use href="./images/sprite.svg#icon-mail"></use>
+                        </svg>
+                    </span>
+                </div>
+                <div class="modal-form-field">
+                    <label for="input-tel" class="modal-form-label">Телефон</label>
+                    <span class="input-wrap">
+                        <input type="tel" id="input-tel" class="modal-form-input" placeholder="+38888888888"
+                            name="modal-name">
+                        <svg class="modal-form-icon" width="12" height="12">
+                            <use href="./images/sprite.svg#icon-tel"></use>
+                        </svg>
+                    </span>
+                </div>
+                <div class="modal-form-field">
+                    <label for="comment" class="modal-form-label">Коммент</label>
+                    <textarea name="modal-comment" id="comment" placeholder="Коммент" class="modal-comment"></textarea>
+                </div>
+                <div class="modal-form-field">
+                    <input type="checkbox" id="check" name="policy" class="visually-hidden checkbox">
+                    <label for="check" class="check-label">
+                        <span class="icon-check">
+                            <svg class="" width="11" height="8">
+                                <use href="./images/sprite.svg#icon-check"></use>
+                            </svg>
+                        </span>
+                        Это текс для чекбокса с <a href="">политикой</a></label>
+                </div>
+                <button type="submit" class="btn form-btn">отправить</button>
+            </form>
         </div>
     </div>
     <script src="./js/modal.js"></script>
