--- a/index.html
+++ b/index.html
@@ -8,32 +8,7 @@
         <link rel="stylesheet" href="./css/styles.css" />
     </head>
     <body>
-        <p class="text">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-            Cupiditate, magni.
-        </p>
-        <!-- <img
-            src="./img/img1.jpg"
-            srcset="./img/img1.jpg 1x, ./img/img1x2.jpg 2x"
-            alt="Барбер"
-        /> -->
-
-        <picture>
-            <source
-                srcset="./img/img1.jpg 1x, ./img/img1x2.jpg 2x"
-                media="(min-width:1200px)"
-            />
-            <source
-                srcset="./img/img-tab.jpg 1x, ./img/img-tab2x.jpg 2x"
-                media="(min-width:768px)"
-            />
-            <source
-                srcset="./img/img1mob.jpg 1x, ./img/img1mob2x.jpg 2x"
-                media="(min-width:320px)"
-            />
-            <img src="./img/img1mob.jpg" alt="Барбер" />
-        </picture>
-        <!-- <div class="wrapper">
+        <div class="wrapper">
             <div class="container">
                 <ul class="list">
                     <li class="item"></li>
@@ -44,6 +19,6 @@
                 <li class="item item-teal"></li>
                 <li class="item item-teal"></li>
             </ul>
-        </div> -->
+        </div>
     </body>
 </html>
