--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="./css/styles.css" />
     </head>
     <body>
-        <div class="wrapper">
+        <!-- <div class="wrapper">
             <div class="container">
                 <ul class="list">
                     <li class="item"></li>
@@ -19,6 +19,6 @@
                 <li class="item item-teal"></li>
                 <li class="item item-teal"></li>
             </ul>
-        </div>
+        </div> -->
     </body>
 </html>
